MDEV-3837 Assertion `table->read_set == &table->def_read_set' failed on updating a performance_schema table This was failing not only for P_S, but for any engine that had HA_PRIMARY_KEY_REQUIRED_FOR_DELETE flag set (in the tree - only P_S and federated). Because of this flag, read_set and write_set were (possibly) changed on update. But later the code modified these bitmaps and restored them to the default state, losing HA_PRIMARY_KEY_REQUIRED_FOR_DELETE related changes.

sql/handler.cc:
  small optimization.
  don't change the *write* set only because all columns has to be *read*